--- a/meshiterro/app/views/layouts/application.html.erb
+++ b/meshiterro/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
           <%= link_to "ログイン", new_user_session_path %>
           </li>
            <li class="">
-           <%= link_to 'マイページ', user_path(current_user.id) %>
+           <%= link_to 'マイページ', user_path(current_users.id) %>
           </li>
           <% end %>
           </ul>
