--- a/meshiterro/app/views/users/show.html.erb
+++ b/meshiterro/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="profile-container">
 	<h3 class="profile-name"><%= @user.name %></h3>
-	<%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb profile-img", style: "width: 100px; height: 100px") %>
+	<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
 	<% if @user.id == current_user.id %>
 	<p><%= link_to "プロフィール編集", edit_user_path(@use), class: "pull-right" %></p>
 	<% end %>
