--- a/meshiterro/app/views/layouts/application.html.erb
+++ b/meshiterro/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <span class="icon-bar"></span>
             </button>
           </div>
-    <<div id="slidemenu">
+    <div id="slidemenu">
         <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
            <% if user_signed_in? %>
            <li class="">
