--- a/meshiterro/app/views/users/edit.html.erb
+++ b/meshiterro/app/views/users/edit.html.erb
@@ -10,29 +10,26 @@
                   <div class="form-user style-1 rounded has-shadow-1">
                     <div class="form-header text-center">
                       <h2 class="form-header-title">プロフィール編集</h2>
-                    </div>
+                     </div>
                     <div class="form-body">
-                    <%= form_with model:@user,local true do |f| %>
+                    <%= form_with model:@user,local:true do |f| %>
                     <div class="form-group has-icon">
                      <label class="control-label sr-only" for="inputEmail">Name</label>
-                     <%= f.text_field :name autofocus :true, class: "form-control", id:"inputEmail", placeholder:"名前"%>
+                     <%= f.text_field :name, autofocus: true, class: "form-control", id:"inputEmail", placeholder:"名前"%>
                      <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
-                     <%= f.submit "変更を保存", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
-                     <% end %>
                     </div>
-                    <% end %>
                     </div>
                     <div class="form-group has-icon">
                      <div class="user-edit-image">
-                       <%= attachment_image_tag: @user,profile_image, :fill 60,60,class: "img-circle pull-left profile-thumb", fallbac: "no_image.jpg"%>
+                       <%= attachment_image_tag @user, :profile_image, :fill ,60, 60, class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg"%>
                      </div>
                      <label class="control-label sr-only" for="inputEmail">ProfileImage</label>
-                     <%= f.attachment_field :prifile_image,placeholder: "プロフィール画像", class: "user-edit-form"%>
-                   </div>
-                   <%= f_submit "変更を保存", class:"btn btn-lg btn-block btn-base-1 mt-20"%>
-                   <% end %>
-              </div>
-            </div>
+                       <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form"%>
+                     </div>
+                       <%= f.submit "変更を保存", class:"btn btn-lg btn-block btn-base-1 mt-20"%>
+                     <% end %>
+                 </div>
+             </div>
           </section>
         </div>
       </div>
