--- a/meshiterro/app/views/users/show.html.erb
+++ b/meshiterro/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <div class="profile-container">
 	<h3 class="profile-name"><%= @user.name %></h3>
-	<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+	<%= attachment_image_tag @user, :profile_image, :fill, 60, 0, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
 	<% if @user.id == current_user.id %>
-	<p><%= link_to "プロフィール編集", edit_user_path(@use), class: "pull-right" %></p>
+	 <p><%= link_to "プロフィール編集", edit_user_path(@user), class: "pull-right" %></p>
 	<% end %>
 </div>
 
@@ -17,16 +17,18 @@
               <div class="block block-image v1">
                 <div class="block-image">
                   <div class="view view-first">
+                    <%= link_to post_image_path(post_image.id) do %>
                     <%= attachment_image_tag post_image, :image %>
+                  <% end %>
                   </div>
                 </div>
                 <div class="block-content">
-                  <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb") %>
+                 <%= attachment_image_tag post_image.user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
                   <h3 class="block-title">
                     <%= link_to post_image_path(post_image.id) do %>
-                      <i class="fa fa-map-marker"></i><%= post_image.shop_name %>
+                      <i class="fa fa-map-marker"></i>
+                      <%= post_image.shop_name %>
                     <% end %>
-                    <%= paginate @post_images %>
 
                   </h3>
                   <p><%= post_image.caption %></p>
@@ -42,6 +44,7 @@
               </div>
             </div>
           <% end %>
+          <%= paginate @post_images %>
         </div>
       </div>
     </div>
